; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_java.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_java.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"\CA\FE\BA\BE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [4 x i32], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @r_buf_size(i32* %7)
  %9 = icmp sgt i32 %8, 32
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds [4 x i32], [4 x i32]* %4, i64 0, i64 0
  %13 = call i32 @r_buf_read_at(i32* %11, i32 0, i32* %12, i32 16)
  %14 = getelementptr inbounds [4 x i32], [4 x i32]* %4, i64 0, i64 0
  %15 = call i32 @memcmp(i32* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %29, label %17

17:                                               ; preds = %10
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @r_buf_read_be32_at(i32* %18, i32 16)
  store i32 %19, i32* %5, align 4
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @r_buf_read_be16_at(i32* %20, i32 6)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp sgt i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %17
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 1024
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i32 1, i32* %2, align 4
  br label %31

28:                                               ; preds = %24, %17
  br label %29

29:                                               ; preds = %28, %10
  br label %30

30:                                               ; preds = %29, %1
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %27
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @r_buf_size(i32*) #1

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @memcmp(i32*, i8*, i32) #1

declare dso_local i32 @r_buf_read_be32_at(i32*, i32) #1

declare dso_local i32 @r_buf_read_be16_at(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
